--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -73,11 +73,12 @@
 
 .upper-part {
     background-color: #3399ff;
-    padding: 20px;
+    padding: 0%;
     border-bottom: 1px solid #888; 
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: 5%;
 }
 
 .upper-part p {
