--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -22,14 +22,12 @@
 			text-align: center;
 			background-color: #cbe3b5;
 		}
-
 		form {
 			max-width: 600px;
 			margin: 0 auto;
 			padding: 20px;
 			background-color: #cbe3b5;
 		}
-
 		input[type="text"] {
 			display: inline-block;
 			width: 50%;
@@ -39,90 +37,79 @@
 			border: 2px solid rgb(0, 0, 0);
 			border-radius: 5px;
 		}
-
 		h5 {
 			margin-top: 1%;
 		}
-
 		tr.tableHover:hover {
 			background-color:lightgray;
 		}
-
-        /* Added [s] Amulya for date validation popup Style part/*		
+                /* Added [s] Amulya for date validation popup Style part/*		
 		 Modal styles */
-.modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
-   /*  background-color: transparent; */
-}
-
-.modal-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 500px;
-    background-color: transparent;
-     border:none;
-}
-
-.upper-part {
-    background-color: #3399ff;
-    padding: 0%;
-    border-bottom: 1px solid #888; 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 5%;
-}
-
-.upper-part p {
-    margin: 0;
-    font-weight: bold;
-    color: white;
-}
-
-.error-message {
-    background-color: #e6e6e6;
-    padding: 20px;
-    color: black;
-}
-
-.close-modal {
-    font-size: 30px;
-    color: red;
-    cursor: pointer;
-}
-
-.close-modal:hover {
-    color: darkred; /* Change the color on hover if needed */
-}
-
-.modal-content button {
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-    margin: 5px; /* Adjust the margin as needed */
-}
-
-.modal-content button:hover {
-    background-color: #555;
-}
-
-/* Added [E] Amulya for date validation popup Style part/*
-
+		 .modal {
+		    display: none;
+		    position: fixed;
+		    top: 0;
+		    left: 0;
+		    width: 100%;
+		    height: 100%;
+		    background-color: rgba(0, 0, 0, 0.5); 
+		}
+		.modal-content {
+		    position: absolute;
+		    top: 50%;
+		    left: 50%;
+		    transform: translate(-50%, -50%);
+		    width: 500px;
+		    background-color: transparent;
+		     border:none;
+		}
+		.upper-part {
+		    background-color: #3399ff;
+		    padding: 0%;
+		    border-bottom: 1px solid #888; 
+		    display: flex;
+		    justify-content: space-between;
+		    align-items: center;
+		    padding-left: 5%;
+		}
+		.upper-part p {
+		    margin: 0;
+		    font-weight: bold;
+		    color: white;
+		}
 		
-	</style>
-
+		.error-message {
+		    background-color: #e6e6e6;
+		    padding: 20px;
+		    color: black;
+		}
+		
+		.close-modal {
+		    font-size: 30px;
+		    color: red;
+		    cursor: pointer;
+		}
+		
+		.close-modal:hover {
+		    color: darkred; /* Change the color on hover if needed */
+		}
+		
+		.modal-content button {
+		    background-color: #333;
+		    color: #fff;
+		    border: none;
+		    border-radius: 3px;
+		    cursor: pointer;
+		    margin: 5px; /* Adjust the margin as needed */
+		}
+		
+		.modal-content button:hover {
+		    background-color: #555;
+		}
+</style>
 </head>
-
+<!--Added [s] Amulya for date validation popup Style part
+-->
 <body th:onload="onLoadcall([[${STM}]])">
 	<!-- ADDED[S] AMULYA To Display the ssoid-->
 	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
@@ -136,8 +123,7 @@
 	<h1 id=hedding>STM:silicone test method</h1>
 	<!-- Added for Delete page Message-->
 	<div id="successMessageDiv" th:if="${message}">
-
-		<p style="color: green;" th:text="${message}"></p>
+        <p style="color: green;" th:text="${message}"></p>
 	</div>
 
 	<div id="errorMessageDiv" th:if="${error}">
