--- a/src/main/resources/static/CSS/styles.css
+++ b/src/main/resources/static/CSS/styles.css
@@ -234,29 +234,9 @@ tr{
 .download-button {
 	background-color: red;
 }
+/*ADD[E] Samata*/
 
-.modal {
-	display: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal-content {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background-color: #fefefe;
-	padding: 20px;
-	border: 1px solid #888;
-	width: 300px;
-	color: red;
-}
-
+/*ADD[s] Amulya*/
 .logout-button {
 	display: block;
 	width: 80px;
@@ -278,4 +258,70 @@ tr{
 	margin-left: 5px;
 }
 
-/*ADD[E] Samata*/
+
+/* Modal styles */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+   /*  background-color: transparent; */
+}
+
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    background-color: transparent;
+     border:none;
+}
+
+.upper-part {
+    background-color: #3399ff;
+    padding: 20px;
+    border-bottom: 1px solid #888; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.upper-part p {
+    margin: 0;
+    font-weight: bold;
+    color: white;
+}
+
+.error-message {
+    background-color: #e6e6e6;
+    padding: 20px;
+    color: black;
+}
+
+.close-modal {
+    font-size: 30px;
+    color: red;
+    cursor: pointer;
+}
+
+.close-modal:hover {
+    color: darkred; /* Change the color on hover if needed */
+}
+
+.modal-content button {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    margin: 5px; /* Adjust the margin as needed */
+}
+
+.modal-content button:hover {
+    background-color: #555;
+}
+/*ADD[E] Amulya*/
