--- a/src/main/resources/templates/RegistrationPage.html
+++ b/src/main/resources/templates/RegistrationPage.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>Registration Form</title>
-<link rel="stylesheet" type="text/css" href="CSS/styles.css">
+<link rel="stylesheet" href="" th:href="@{/CSS/styles.css}">
 <style>
 body {
 	font-family: Arial, sans-serif;
@@ -51,71 +51,6 @@ button:hover {
 	background-color: #555;
 }
 
-.modal {
-	display: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
-	/*  background-color: transparent; */
-}
-
-.modal-content {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 500px;
-	background-color: transparent;
-	border: none;
-}
-
-.upper-part {
-	background-color: #3399ff;
-	padding: 20px;
-	border-bottom: 1px solid #888;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-
-.upper-part p {
-	margin: 0;
-	font-weight: bold;
-	color: white;
-}
-
-.error-message {
-	background-color: #e6e6e6;
-	padding: 20px;
-	color: black;
-}
-
-.close-modal {
-	font-size: 30px;
-	color: red;
-	cursor: pointer;
-}
-
-.close-modal:hover {
-	color: darkred;
-}
-
-.modal-content button {
-	background-color: #333;
-	color: #fff;
-	border: none;
-	border-radius: 3px;
-	cursor: pointer;
-	margin: 5px;
-}
-
-.modal-content button:hover {
-	background-color: #555;
-}
-
 .stmNumber {
 	height: 15px;
 	background-color: #4d4d4d;
@@ -139,18 +74,47 @@ button:hover {
 		Logout <i>&#10142;</i>
 	</a>
 
-	<h1>STM:Silicone Test Method</h1>
-	<!-- <div id="pdfError" class="error-message"></div>
-    <div id="wordError" class="error-message"></div> -->
+	<h1>STM:Silicone Test Method</h1>	
+	<!-- Success Modal -->
+<div id="successModal" class="modal" th:if="${message}">
+    <div class="modal-content">
+        <!-- Upper part with green color -->
+        <div class="upper-part success-upper">
+            <p>Success</p>
+            <span class="close-modal" onclick="closeModal('successModal')">&times;</span>
+        </div>
+        
+        <!-- Lower part with dark color -->
+        <div class="error-message">
+            <div class="success-message">
+                <p th:text="${message}" style="color: black;"></p>
+            </div>
+            <button type="button" class="ok-button" onclick="closeModal('successModal')">OK</button>
+        </div>
+    </div>
+</div>
 
-	<!-- <p id="message" th:text="${message}"></p>
-	<p id="message" th:text="${error}"></p> -->
-	<div id="successMessageDiv" th:if="${message}">
-		<p style="color: green;" th:text="${message}"></p>
-	</div>
-	<div id="errorMessageDiv" th:if="${error}">
-		<p style="color: red;" th:text="${error}"></p>
-	</div>
+<!-- Error Modal -->
+<div id="errorModal" class="modal" th:if="${error}">
+    <div class="modal-content">
+        <!-- Upper part with red color -->
+        <div class="upper-part error-upper">
+            <p>Error</p>
+            <span class="close-modal" onclick="closeModal('errorModal')">&times;</span>
+        </div>
+        
+        <!-- Lower part with dark color -->
+        <div class="error-message">
+            <div class="error-message">
+                <p th:text="${error}" style="color: red;"></p>
+            </div>
+            <button type="button" class="ok-button" onclick="closeModal('errorModal')">OK</button>
+        </div>
+    </div>
+</div>
+	
+	
+	
 	<div id="modal" class="modal">
 		<div class="modal-content">
 			<span class="close" onclick="closeModal()">&times;</span>
@@ -236,6 +200,7 @@ button:hover {
 				</div>
 				<div class="error-message">
 					<p>Invalid file format. Please select a PDF file.</p>
+					<button type="button" class="ok-button" onclick="closeModal('pdfError')">OK</button>
 				</div>
 			</div>
 		</div>
@@ -245,11 +210,12 @@ button:hover {
 			<div class="modal-content">
 				<div class="upper-part">
 					<p>error</p>
-					' <span class="close-modal" onclick="closeModal('wordError')">&times;</span>
+					<span class="close-modal" onclick="closeModal('wordError')">&times;</span>
 				</div>
 				<div class="error-message">
 					<p>Invalid file format. Please select a Word file (doc or
 						docx).</p>
+					<button type="button" class="ok-button" onclick="closeModal('wordError')">OK</button>	
 				</div>
 			</div>
 		</div>
@@ -262,6 +228,7 @@ button:hover {
 				</div>
 				<div class="error-message">
 					<p>Invalid month. Please enter a valid month (1-12).</p>
+					<button type="button" class="ok-button" onclick="closeModal('modalErrorMonth')">OK</button>
 				</div>
 			</div>
 		</div>
@@ -275,6 +242,8 @@ button:hover {
 				<div class="error-message">
 					<p>Invalid day. Please enter a valid day for the selected
 						month.</p>
+					<button type="button" class="ok-button" onclick="closeModal('modalErrorDay')">OK</button>	
+						
 				</div>
 			</div>
 		</div>
@@ -328,7 +297,21 @@ button:hover {
 		</div>
 	</form>
 	<script th:src="@{/js/register.js}"></script>
+    <script th:inline="javascript">
+    /*<![CDATA[*/
+    // Check if the success message exists and open the success modal
+    var successMessage = /*[[${message}]]*/ '';
+    if (successMessage) {
+        openModal('successModal');
+    }
 
+    // Check if the error message exists and open the error modal
+    var errorMessage = /*[[${error}]]*/ '';
+    if (errorMessage) {
+        openModal('errorModal');
+    }
+  
+</script>   
 
 
 </body>
