--- a/src/main/resources/templates/DeleteScreen.html
+++ b/src/main/resources/templates/DeleteScreen.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Delete</title>
- <link rel="stylesheet" type="text/css" href="CSS/styles.css">
+ <link rel="stylesheet" href="" th:href="@{/CSS/styles.css}">
   <style>
   body {
 	font-family: Arial, sans-serif;
@@ -54,72 +54,6 @@ button:hover {
 	background-color: #555;
 }
 
-/* Modal styles */
-.modal {
-	display: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
-	/*  background-color: transparent; */
-}
-
-.modal-content {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 500px;
-	background-color: transparent;
-	border: none;
-}
-
-.upper-part {
-	background-color: #3399ff;
-	padding: 20px;
-	border-bottom: 1px solid #888;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-
-.upper-part p {
-	margin: 0;
-	font-weight: bold;
-	color: white;
-}
-
-.error-message {
-	background-color: #e6e6e6;
-	padding: 20px;
-	color: black;
-}
-
-.close-modal {
-	font-size: 30px;
-	color: red;
-	cursor: pointer;
-}
-
-.close-modal:hover {
-	color: darkred;
-}
-
-.modal-content button {
-	background-color: #333;
-	color: #fff;
-	border: none;
-	border-radius: 3px;
-	cursor: pointer;
-	margin: 5px;
-}
-
-.modal-content button:hover {
-	background-color: #555;
-}
-
 .registerclose {
 	width: 20%;
 	background-color: #000066;
@@ -159,27 +93,7 @@ button:hover {
     font-size: 18px;
     font-weight: bold;
 }
-.logout-button {
 
-            display: block;
-            width: 80px;
-            padding: 10px;
-            margin: 5px 0;
-            background-color: #000066;
-            color: #fff;
-            text-decoration: none;
-            text-align: center;
-            border: 3px solid rgb(64, 0, 0);
-            border-radius: 10px;
-            position: fixed;
-            top: 10px;
-            right: 10px;
-        }
-
-        /* Style for the arrow inside the button */
-        .logout-button i {
-            margin-left: 5px; 
-        } 
 </style>
 </head>
 <body id="dashboardBody">
