--- a/src/main/resources/static/CSS/styles.css
+++ b/src/main/resources/static/CSS/styles.css
@@ -73,7 +73,6 @@
 	margin: 10px 20px;
 
 }
-
 .registerclose {
 	width: 20%;
 	background-color: #000066;
@@ -82,7 +81,6 @@
 	border: 3px solid rgb(64, 0, 0);
 	border-radius: 10px;
 }
-
 .returnClear {
 	width: 20%;
 	background-color: orange;
@@ -91,11 +89,9 @@
 	border: 2px solid rgb(64, 0, 0);
 	border-radius: 10px;
 }
-
 input[type="text"] {
 	border: 2px solid rgb(0, 0, 0);
 }
-
 
 /* 
 /*Searchpage
@@ -107,18 +103,15 @@ ADD[S]Samata 2023/11/14
 	font-weight: bold;
 	text-align: center;
 }
-
 .label-container {
 	display: flex;
 	width: 100%;
 }
-
 .label-container label {
 	width: 50%;
 	text-align: left;
 	margin: 10px 20px;
 }
-
 .hedding {
 	padding: 20px 0;
 }
@@ -152,7 +145,6 @@ tr{
 	height: 40px;
 
 }
-
 .reset {
 	width: 30%;
 	color: #fff;
@@ -161,7 +153,6 @@ tr{
 	border-radius: 10px;
 	background-color: #eea647;
 }
-
 .menu {
 	width: 30%;
 	color: #fff;
@@ -169,7 +160,6 @@ tr{
 	border: 3px solid rgb(64, 0, 0);
 	border-radius: 10px;
 }
-
 .view {
 	width: 30%;
 	color: #fff;
@@ -180,18 +170,14 @@ tr{
 	height: 40px;
 
 }
-
-
 #table1 {
 	height: 400px;
 	width: 1600px;
 	overflow-y: scroll;
 }
-
 .table-layout .clickedrow td {
 	background-color: rgb(189, 189, 189);
 }
-
 .table-layout {
 	border-collapse: collapse;
 	font-family: arial-narrow, helvetica, sans-serif;
@@ -203,21 +189,23 @@ tr{
 	overflow-x: auto;
 	white-space: nowrap;
 }
-
-/*
-.table-layout td,
-.table-layout th {
-	border: 1px solid grey;
-	padding: 3px 3px 0;
-	height: 38px;
-	line-height: 38px;
-	width: 100px;
-	font-size: 120%;
-	background-color: #eea647;
-	height: 32px;
-	line-height: 22px;
+.search:hover {
+	background-color: #2980b9;
 }
-*/
+
+.reset:hover {
+	background-color: #2980b9;
+}
+
+.menu:hover,
+.menu:focus {
+	background-color: #2980b9;
+}
+
+.view:hover {
+	background-color: #2980b9;
+}
+
 /*ModifySearchdata */
 .close {
 	color: #aaa;
@@ -226,13 +214,12 @@ tr{
 	font-weight: bold;
 	cursor: pointer;
 }
-
 .close:hover {
 	color: black;
 }
-
 .download-button {
 	background-color: red;
+	border: 1px solid #888;
 }
 /*ADD[E] Samata*/
 
