@Samata added pattern message for all fields.

--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -14,7 +14,7 @@
 		var contextPath = /*[[${#httpServletRequest.contextPath}]]*/ '/';
     /*]]>*/
 	</script>
-<style>
+	<style>
 		body {
 			font-family: Arial, sans-serif;
 			margin: 0;
@@ -22,14 +22,12 @@
 			text-align: center;
 			background-color: #cbe3b5;
 		}
-
 		form {
 			max-width: 600px;
 			margin: 0 auto;
 			padding: 20px;
 			background-color: #cbe3b5;
 		}
-
 		input[type="text"] {
 			display: inline-block;
 			width: 50%;
@@ -39,19 +37,18 @@
 			border: 2px solid rgb(0, 0, 0);
 			border-radius: 5px;
 		}
-
 		h5 {
 			margin-top: 1%;
 		}
-
 		tr.tableHover:hover {
-			background-color:lightgray;
-		}		
+			background-color: lightgray;
+		}
 	</style>
 
 </head>
 <!--Added [s] Amulya for date validation popup Style part
 -->
+
 <body th:onload="onLoadcall([[${STM}]])">
 	<!-- ADDED[S] AMULYA To Display the ssoid-->
 	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
@@ -64,44 +61,44 @@
 
 	<h1 id=hedding>STM:silicone test method</h1>
 	<!-- Added[s] Amulya for Delete page Message-->
-<!-- Success Modal -->
-<div id="successModal" class="modal" th:if="${message}">
-    <div class="modal-content">
-        <!-- Upper part with green color -->
-        <div class="upper-part success-upper">
-            <p>Success</p>
-            <span class="close-modal" onclick="closeModal('successModal')">&times;</span>
-        </div>
-        
-        <!-- Lower part with dark color -->
-        <div class="error-message">
-            <div class="success-message">
-                <p th:text="${message}" style="color: black;"></p>
-            </div>
-            <button type="button" class="ok-button" onclick="closeModal('successModal')">OK</button>
-        </div>
-    </div>
-</div>
+	<!-- Success Modal -->
+	<div id="successModal" class="modal" th:if="${message}">
+		<div class="modal-content">
+			<!-- Upper part with green color -->
+			<div class="upper-part success-upper">
+				<p>Success</p>
+				<span class="close-modal" onclick="closeModal('successModal')">&times;</span>
+			</div>
 
-<!-- Error Modal -->
-<div id="errorModal" class="modal" th:if="${error}">
-    <div class="modal-content">
-        <!-- Upper part with red color -->
-        <div class="upper-part error-upper">
-            <p>Error</p>
-            <span class="close-modal" onclick="closeModal('errorModal')">&times;</span>
-        </div>
-        
-        <!-- Lower part with dark color -->
-        <div class="error-message">
-            <div class="error-message">
-                <p th:text="${error}" style="color: red;"></p>
-            </div>
-            <button type="button" class="ok-button" onclick="closeModal('errorModal')">OK</button>
-        </div>
-    </div>
-</div>
-<!-- Added[E] Amulya for Delete page Message-->	
+			<!-- Lower part with dark color -->
+			<div class="error-message">
+				<div class="success-message">
+					<p th:text="${message}" style="color: black;"></p>
+				</div>
+				<button type="button" class="ok-button" onclick="closeModal('successModal')">OK</button>
+			</div>
+		</div>
+	</div>
+
+	<!-- Error Modal -->
+	<div id="errorModal" class="modal" th:if="${error}">
+		<div class="modal-content">
+			<!-- Upper part with red color -->
+			<div class="upper-part error-upper">
+				<p>Error</p>
+				<span class="close-modal" onclick="closeModal('errorModal')">&times;</span>
+			</div>
+
+			<!-- Lower part with dark color -->
+			<div class="error-message">
+				<div class="error-message">
+					<p th:text="${error}" style="color: red;"></p>
+				</div>
+				<button type="button" class="ok-button" onclick="closeModal('errorModal')">OK</button>
+			</div>
+		</div>
+	</div>
+	<!-- Added[E] Amulya for Delete page Message-->
 	<div id="modal" class="modal">
 		<div class="modal-content">
 			<span class="close" onclick="closeModal()">&times;</span>
@@ -117,14 +114,14 @@
 			<label for="stmNumber">STM Number <br>(Quality inspection
 				method_master quality inspection characteristics)
 			</label> <input type="text" id="stmNumber" name="stmNo" maxlength="15" onkeydown="enterClick(1,event)"
-				pattern="[a-zA-Z0-9\u3040-\u30FF]*" title="Enter only Alphanumeric and Japanese Characters."
+				pattern="[a-zA-Z0-9\u3040-\u30FF]*" oninvalid="InvalidMsg(this,'Enter only Alphanumeric and Japanese Characters.');" oninput="InvalidMsg(this,'Enter only Alphanumeric and Japanese Characters.');"
 				style="margin-top: 3%;" />
 		</div>
 
 		<div class="label-container">
 			<label for="revisionNumber">Revision Number</label>
 			<input type="text" id="Revision number" minlength="1" maxlength="4" name="stmVersion" pattern="[0-9]*"
-				title="Enter only Numbers." onkeydown="enterClick(2,event)" style="width: 11%;margin-right: 35%;" />
+				oninvalid="InvalidMsg(this, 'Enter Only Numbers.');" oninput="InvalidMsg(this, 'Enter Only Numbers.');" onkeydown="enterClick(2,event)" style="width: 11%;margin-right: 35%;" />
 		</div>
 
 		<div class="label-container">
@@ -132,20 +129,20 @@
 			<input type="text" id="Link destination" name="linkDestination" maxlength="15"
 				onkeydown="enterClick(3,event)"
 				pattern="^[a-zA-Z0-9\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF]+$"
-				title="Enter only Alphanumeric and Japanese Characters." />
+				 oninvalid="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');" oninput="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');"  />
 		</div>
 
 		<div class="label-container">
 			<label for="textJapanese">Text (Short) Japanese</label>
 			<input type="text" id="Japanese" name="textShortJP" maxlength="200" onkeydown="enterClick(4,event)"
 				pattern="^[\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s。]+$"
-				title="Enter Only Japanese characters." />
+				  oninvalid="InvalidMsg(this, 'Enter Only Japanese characters.');" oninput="InvalidMsg(this, 'Enter Only Japanese characters.');"  />
 		</div>
 
 		<div class="label-container">
 			<label for="textEnglish">Text (Short) English</label>
 			<input type="text" id="English" name="textShortEN" maxlength="200" pattern="[a-zA-Z]*"
-				title="Please input alphabet characters only" onkeydown="enterClick(5,event)" />
+				onkeydown="enterClick(5,event)" oninvalid="InvalidMsg(this, 'Please input alphabet characters only.');" oninput="InvalidMsg(this, 'Please input alphabet characters only.');"  />
 		</div>
 
 		<div class="label-container">
@@ -171,19 +168,18 @@
 		<div class="label-container">
 			<label for="finalDrafter">Final Drafter (Last Name)</label>
 			<input type="text" id="finalDrafterName" name="finalDrafterName" max="100"
-				title="Enter only Characters,Japanese and Space only allowed."
 				pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$"
-				onkeydown="enterClick(8,event)" />
+				onkeydown="enterClick(8,event)"  oninvalid="InvalidMsg(this, 'Enter only Characters,Japanese and Space only allowed.');" oninput="InvalidMsg(this, 'Enter only Characters,Japanese and Space only allowed.');"  />
 		</div>
 
 		<div class="label-container">
 			<label for="oldStmNumber">Old STM Number</label>
 			<input type="text" id="oldSTMnumber" name="oldSTMNumber" maxlength="15" pattern="[a-zA-Z0-9\u3040-\u30FF]*"
-				title="Enter only Alphanumeric and Japanese Characters." onkeydown="enterClick(9,event)" />
+			 onkeydown="enterClick(9,event)" oninvalid="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');" oninput="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');"  />
 		</div>
 
-<!-- Added [s] Amulya for date validation popup -->
-<div id="modalErrorMonth" class="modal">
+		<!-- Added [s] Amulya for date validation popup -->
+		<div id="modalErrorMonth" class="modal">
 			<div class="modal-content">
 				<div class="upper-part">
 					<p>error</p> <span class="close-modal" onclick="closeModal('modalErrorMonth')">&times;</span>
@@ -206,13 +202,14 @@
 				</div>
 			</div>
 		</div>
-<!-- Added [E] Amulya for date validation popup -->
-		
+		<!-- Added [E] Amulya for date validation popup -->
+
 		<div style="display: flex; justify-content: space-between; margin-top: 100px;">
 			<button class="btn btn-primary search" type="submit" id="searchbtn" onsubmit="searchcall()"
 				onkeydown="enterClick(10,event)">Search</button>
 
-			<button class="btn btn-primary reset" type="reset" id="resetbtn" onclick="resetcall()" onkeydown="enterClick(11,event)">Reset</button>
+			<button class="btn btn-primary reset" type="reset" id="resetbtn" onclick="resetcall()"
+				onkeydown="enterClick(11,event)">Reset</button>
 
 			<button class="btn btn-primary menu" style="color: white;background-color: limegreen;" type="button"
 				th:onclick="|window.location.href='@{/dashboard(ssoid=${ssoid})}'|">Menu</button>
@@ -268,19 +265,19 @@
 	</div>
 	<!--  added[S] Amulya For Timer purpose -->
 	<script th:inline="javascript">
-	
-	 // Check if the success message exists and open the success modal
-    var successMessage = /*[[${message}]]*/ '';
-    if (successMessage) {
-        openModal('successModal');
-    }
 
-    // Check if the error message exists and open the error modal
-    var errorMessage = /*[[${error}]]*/ '';
-    if (errorMessage) {
-        openModal('errorModal');
-    }  
-	
+		// Check if the success message exists and open the success modal
+		var successMessage = /*[[${message}]]*/ '';
+		if (successMessage) {
+			openModal('successModal');
+		}
+
+		// Check if the error message exists and open the error modal
+		var errorMessage = /*[[${error}]]*/ '';
+		if (errorMessage) {
+			openModal('errorModal');
+		}
+
 		//Set the duration for the messages to be displayed in milliseconds (e.g., 5000 for 5 seconds)
 		var messageDuration = 5000;
 
