--- a/src/main/resources/templates/RegistrationPage.html
+++ b/src/main/resources/templates/RegistrationPage.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
 <title>Registration Form</title>
+<meta charset="UTF-8">
 <link rel="stylesheet" href="" th:href="@{/CSS/styles.css}">
 <style>
 body {
