--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -22,12 +22,14 @@
 			text-align: center;
 			background-color: #cbe3b5;
 		}
+
 		form {
 			max-width: 600px;
 			margin: 0 auto;
 			padding: 20px;
 			background-color: #cbe3b5;
 		}
+
 		input[type="text"] {
 			display: inline-block;
 			width: 50%;
@@ -37,9 +39,11 @@
 			border: 2px solid rgb(0, 0, 0);
 			border-radius: 5px;
 		}
+
 		h5 {
 			margin-top: 1%;
 		}
+
 		tr.tableHover:hover {
 			background-color: lightgray;
 		}
@@ -107,21 +111,24 @@
 	</div>
 
 	<!--  Added for Delete page Message-->
-	<p style="text-align: center;" id="recordDisplay" th:text="${records}"></p>
-
+	<!--	<p style="text-align: center;" id="recordDisplay" th:text="${records}"></p>
+-->
 	<form method="post" class="form-horizontal" th:action="@{/searchClick(ssoid = ${ssoid})}">
 		<div class="label-container" style="margin-top: 20px;">
 			<label for="stmNumber">STM Number <br>(Quality inspection
 				method_master quality inspection characteristics)
 			</label> <input type="text" id="stmNumber" name="stmNo" maxlength="15" onkeydown="enterClick(1,event)"
-				pattern="[a-zA-Z0-9\u3040-\u30FF]*" oninvalid="InvalidMsg(this,'Enter only Alphanumeric and Japanese Characters.');" oninput="InvalidMsg(this,'Enter only Alphanumeric and Japanese Characters.');"
+				pattern="[a-zA-Z0-9\u3040-\u30FF]*"
+				oninvalid="InvalidMsg(this,'Enter only Alphanumeric and Japanese Characters.');"
+				oninput="InvalidMsg(this,'Enter only Alphanumeric and Japanese Characters.');"
 				style="margin-top: 3%;" />
 		</div>
 
 		<div class="label-container">
 			<label for="revisionNumber">Revision Number</label>
-			<input type="text" id="Revision number" minlength="1" maxlength="4" name="stmVersion" pattern="[0-9]*"
-				oninvalid="InvalidMsg(this, 'Enter Only Numbers.');" oninput="InvalidMsg(this, 'Enter Only Numbers.');" onkeydown="enterClick(2,event)" style="width: 11%;margin-right: 35%;" />
+			<input type="text" id="Revision number" maxlength="4" name="stmVersion" pattern="[0-9]*"
+				oninvalid="InvalidMsg(this, 'Enter Only Numbers.');" oninput="InvalidMsg(this, 'Enter Only Numbers.');"
+				onkeydown="enterClick(2,event)" style="width: 11%;margin-right: 35%;" />
 		</div>
 
 		<div class="label-container">
@@ -129,20 +136,23 @@
 			<input type="text" id="Link destination" name="linkDestination" maxlength="15"
 				onkeydown="enterClick(3,event)"
 				pattern="^[a-zA-Z0-9\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF]+$"
-				 oninvalid="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');" oninput="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');"  />
+				oninvalid="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');"
+				oninput="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');" />
 		</div>
 
 		<div class="label-container">
 			<label for="textJapanese">Text (Short) Japanese</label>
 			<input type="text" id="Japanese" name="textShortJP" maxlength="200" onkeydown="enterClick(4,event)"
 				pattern="^[\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s。]+$"
-				  oninvalid="InvalidMsg(this, 'Enter Only Japanese characters.');" oninput="InvalidMsg(this, 'Enter Only Japanese characters.');"  />
+				oninvalid="InvalidMsg(this, 'Enter Only Japanese characters.');"
+				oninput="InvalidMsg(this, 'Enter Only Japanese characters.');" />
 		</div>
 
 		<div class="label-container">
 			<label for="textEnglish">Text (Short) English</label>
 			<input type="text" id="English" name="textShortEN" maxlength="200" pattern="[a-zA-Z]*"
-				onkeydown="enterClick(5,event)" oninvalid="InvalidMsg(this, 'Please input alphabet characters only.');" oninput="InvalidMsg(this, 'Please input alphabet characters only.');"  />
+				onkeydown="enterClick(5,event)" oninvalid="InvalidMsg(this, 'Please input alphabet characters only.');"
+				oninput="InvalidMsg(this, 'Please input alphabet characters only.');" />
 		</div>
 
 		<div class="label-container">
@@ -169,13 +179,17 @@
 			<label for="finalDrafter">Final Drafter (Last Name)</label>
 			<input type="text" id="finalDrafterName" name="finalDrafterName" max="100"
 				pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$"
-				onkeydown="enterClick(8,event)"  oninvalid="InvalidMsg(this, 'Enter only Characters,Japanese and Space only allowed.');" oninput="InvalidMsg(this, 'Enter only Characters,Japanese and Space only allowed.');"  />
+				onkeydown="enterClick(8,event)"
+				oninvalid="InvalidMsg(this, 'Enter only Characters,Japanese and Space only allowed.');"
+				oninput="InvalidMsg(this, 'Enter only Characters,Japanese and Space only allowed.');" />
 		</div>
 
 		<div class="label-container">
 			<label for="oldStmNumber">Old STM Number</label>
 			<input type="text" id="oldSTMnumber" name="oldSTMNumber" maxlength="15" pattern="[a-zA-Z0-9\u3040-\u30FF]*"
-			 onkeydown="enterClick(9,event)" oninvalid="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');" oninput="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');"  />
+				onkeydown="enterClick(9,event)"
+				oninvalid="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');"
+				oninput="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');" />
 		</div>
 
 		<!-- Added [s] Amulya for date validation popup -->
@@ -210,15 +224,15 @@
 
 			<button class="btn btn-primary reset" type="reset" id="resetbtn" onclick="resetcall()"
 				onkeydown="enterClick(11,event)">Reset</button>
+			<button type="submit" class="btn btn-primary view">View</button>
 
-			<button class="btn btn-primary menu" style="color: white;background-color: limegreen;" type="button"
-				th:onclick="|window.location.href='@{/dashboard(ssoid=${ssoid})}'|">Menu</button>
 		</div>
 	</form>
-	<form th:action="@{/viewClick(ssoid = ${ssoid})}" method="post">
-		<!--<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />-->
+	<!--<form th:action="@{/viewClick(ssoid = ${ssoid})}" method="post">
 		<button type="submit" class="btn btn-primary view">View</button>
-	</form>
+	</form>-->
+
+	<p style="text-align: center;color: red;" id="recordDisplay" th:text="${records}"></p>
 
 	<div class="table-responsive table-layout" style="margin-left: 2%;margin-right: 1%;">
 		<table class="table" id="searchTable" title="Confidential information" style="width: 100%;">
@@ -241,8 +255,8 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="n:${list}" onclick="" class="tableHover">
-					<td style="width: 3%;" th:text="${n.getNo()}"></td>
+				<tr th:each="n,iterStat:${list}" onclick="" class="tableHover">
+					<td style="width: 3%;" th:text="${iterStat.count + 0}"></td>
 					<td th:text="${n.getStmNo()}"></td>
 					<td style="text-align: right;width: 5%;padding-right: 10px;" th:text="${n.getStmVersion()}"></td>
 					<td style="width:8%;" th:text="${n.getLinkDestination()}"></td>
@@ -257,11 +271,13 @@
 					<td th:text="${n.getNote2()}"></td>
 					<td th:text="${n.getNote3()}"></td>
 				</tr>
-			<tbody>
+			</tbody>
+			</tbody>
 		</table>
 	</div>
-	</div>
-	</div>
+	<div>
+		<button class="btn btn-primary menu" style="color: white;background-color: limegreen;" type="button"
+			th:onclick="|window.location.href='@{/dashboard(ssoid=${ssoid})}'|">Menu</button>
 	</div>
 	<!--  added[S] Amulya For Timer purpose -->
 	<script th:inline="javascript">
