--- a/src/main/resources/static/CSS/styles.css
+++ b/src/main/resources/static/CSS/styles.css
@@ -134,6 +134,11 @@ tr{
 	height: 40px;
 	background: honeydew;
 	font-size: 15px;
+	text-align: left;
+	padding-left: 70px;
+}
+td{
+	padding-left: 10px;
 }
 .search {
 	width: 30%;
@@ -154,11 +159,13 @@ tr{
 	background-color: #eea647;
 }
 .menu {
-	width: 30%;
+	width: 7%;
+	height: 40px;
 	color: #fff;
 	text-align: center;
 	border: 3px solid rgb(64, 0, 0);
 	border-radius: 10px;
+	margin-left: 2050px;
 }
 .view {
 	width: 30%;
