--- a/src/main/resources/templates/LoginScreen.html
+++ b/src/main/resources/templates/LoginScreen.html
@@ -19,12 +19,20 @@
             font-size: 40px;
             font-weight: bold;
             text-align: center;
+            margin-top: 20px; 
+            position: fixed;
+             width: 50%;
+            top: 120px; 
+            left: 25%;
+            z-index: 1; 
         }
 
         form {
             width: 50%;
             margin: 0 auto;
             text-align: left;
+            position: relative; 
+            margin-top: 100px; 
         }
 
         .form-group {
@@ -45,10 +53,9 @@
             height: 40px;
             box-sizing: border-box;
             margin-bottom: 20px;
-             margin-left: 10px;
+            margin-left: 10px;
         }
 
-        
         input[type="password"] {
             width: 30%; 
             height: 40px;
@@ -56,11 +63,9 @@
             margin-bottom: 20px; 
             margin-left: -18px;
         }
-        
 
         input[type="submit"] {
-            background-color: darkblue;
-            
+            background-color: darkblue; 
             color: white;
             font-size: 30px;
             width: auto;
@@ -77,10 +82,11 @@
     <form th:action="@{/login}" th:object="${loginScreen}" method="post">
         <p th:if="${invalidCredentials}" class="error" id="errorMessage">ID or password mismatch</p>
         <p th:if="${accountDeleted}" class="error" id="errorMessage">User ID already deleted from system</p>
+        
         <div class="form-group">
             <label for="ssoid">SSO ID</label>
-            <input type="text" id="ssoid" name="ssoid" autofocus="autofocus" pattern="^[a-zA-Z0-9\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$"
-				title="Alphabet, Japanese characters,number and Space only allowed" maxlength="11" required>
+            <input type="text" id="ssoid" name="ssoid" autofocus="autofocus" pattern="^[a-zA-Z0-9\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s@]+$"
+                title="Alphabet, Japanese characters,number and Space only allowed" maxlength="11" required>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
@@ -97,7 +103,7 @@
             if (errorMessage) {
                 errorMessage.style.display = 'none';
             }
-        }, 2000);
+        }, 20000);
     </script>
 </body>
 </html>
