--- a/src/main/resources/templates/ModifyScreen.html
+++ b/src/main/resources/templates/ModifyScreen.html
@@ -93,8 +93,13 @@ button:hover {
 
 .stmNumber {
 	height: 15px;
-	background-color: #4d4d4d;
-	color: #fff;
+	background-color: #a2a2c3;
+	color: rgb(64, 0, 64);
+}
+.stmNumber1 {
+	height: 15px;
+    background-color:#4d4d4d;
+    color: #fff;
 }
 
 .label-container #attachedPdf {
@@ -172,9 +177,9 @@ button:hover {
 
 		<div class="label-container">
 			<label for="revisionNumber">Revision Number</label> <input
-				id="revisionNumber" class="stmNumber" type="text"
+				id="revisionNumber" class="stmNumber1" type="text"
 				style="height: 15px; width: 40px; margin-left: 0px; margin-top: -6px;"
-				th:field="${stm.stmVersion}" readonly /> Automatic renewal
+				th:field="${stm.stmVersion}" readonly />&nbsp;&nbsp;Automatic renewal
 			numbering
 
 		</div>
@@ -200,7 +205,7 @@ button:hover {
 		<div class="label-container">
 			<label for="attachmentPdf">Attachment (PDF)</label>
 			<div class="file-input">
-				<input type="text" class="stmNumber" id="attachedPdf"
+				<input type="text" class="stmNumber1" id="attachedPdf"
 					th:field="${stm.pdfFile}" disabled="disabled" maxlength="25" />
 				<button type="button"
 					style="background-color: red; border-radius: 5px;"
@@ -215,7 +220,7 @@ button:hover {
 		<div class="label-container">
 			<label for="attachmentWord">Attachment (Word)</label>
 			<div class="file-input">
-				<input type="text" class="stmNumber" id="attachedWord"
+				<input type="text" class="stmNumber1" id="attachedWord"
 					th:field="${stm.wordFile}" disabled="disabled" maxlength="25" />
 				<button type="button"
 					style="background-color: red; border-radius: 5px;"
@@ -307,7 +312,7 @@ button:hover {
 			<button type="button" name="action" value="modify"
 				class="registerclose" onclick="openModal('modifyConfirmation')">Modify</button>
 			<button type="button" name="action" value="return"
-				class="returnClear"
+				class="returnClear"  style="margin-left: 80px;"
 				th:onclick="|window.location.href='@{/returnSearchPage(ssoid = ${ssoid})}'|">Return</button>
 		</div>
 		<!-- Modal for Modify confirmation -->
@@ -354,6 +359,7 @@ button:hover {
 		</div>
 
 	</form>
+	<div style="right:100px; position: absolute;"> <button style="width: 120px;border: 3px solid rgb(64, 0, 0); border-radius: 10px; color: white; background-color: limegreen;" type="button" th:onclick="|window.location.href='@{/dashboard(ssoid=${ssoid})}'|">Menu</button></div>
 
 	<script th:inline="javascript">
 		function openModal(message) {
